# vocabulary-hub

./: CONTRIBUTING.md  README.md  docker-compose.yml
spikes/: .gitignore  README.md  SYNTHESIS.md  pyproject.toml
spikes/01_oxigraph_coverage/: README.md  RESULT.md  feature_matrix.md  probe.py  probes.yaml  run.sh
spikes/01_oxigraph_coverage/inputs/: README.md  gen_bulk.py  probe-dataset.ttl  probe-graph.ttl
spikes/01_oxigraph_coverage/results/20260521T145859Z-728771b-c282e2/: feature_matrix.md  probe_results.json  summary.md
spikes/01_oxigraph_coverage/results/20260521T150143Z-728771b-c282e2/: feature_matrix.md  probe_results.json  summary.md
spikes/02_oxigraph_bench/: FINDINGS.md  README.md  RESULT.md  SYNTHESIS.md  bench.py  run.sh
spikes/02_oxigraph_bench/harness/: generate_data.py  runner.py  synthesize.py
spikes/02_oxigraph_bench/harness/frameworks/: fuseki_tdb2.py  (+6 more)
spikes/02_oxigraph_bench/queries/: q01_label_lookup.rq  q02_broader_path.rq  q03_scheme_enum.rq  q04_construct_neighborhood.rq  q05_narrower_closure.rq  q06_named_graph.rq  q07_update_insert.ru  q08_ask.rq  q1_count.rq  q2_top_customers.rq  q3_join_filter.rq  q4_optional_agg.rq
spikes/03_maplib_rml_conformance/: .gitignore  README.md  run.sh  run_suite.py
spikes/03_maplib_rml_conformance/inputs/: .gitignore
spikes/04_maplib_bench/: FINDINGS.md  README.md  bench.py  run.sh
spikes/04_maplib_bench/inputs/: .gitignore
spikes/05_virtualization_scope/: README.md  decision.md  record.py  record.sh
spikes/_lib/: provenance.py  rss.py  timing.py
spikes/docker/: docker-compose.yml
(+484 files in other folders)
